data/derived/comb/progs/unify/prog6618.ml.out
Characters 117-118:
  (r/10,(r mod 10)::b) in
   ^
Error: This expression has type int list
       but an expression was expected of type int
